--- a/Depo/Lifedrive/Presentation/UserStories/Introduce/View/IntroduceViewController.xib
+++ b/Depo/Lifedrive/Presentation/UserStories/Introduce/View/IntroduceViewController.xib
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina5_9" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="IntroduceViewController" customModule="LifeTech_lifedrive" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="IntroduceViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="createAccountButton" destination="N29-gd-nz6" id="A82-Dm-w5t"/>
                 <outlet property="haveAccountLabel" destination="EJV-go-laA" id="CxI-JR-PLP"/>
@@ -20,41 +21,45 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash_logo" translatesAutoresizingMaskIntoConstraints="NO" id="LEY-g9-CGx">
-                    <rect key="frame" x="121.00000000000001" y="60" width="133.33333333333337" height="100"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_with_icon" translatesAutoresizingMaskIntoConstraints="NO" id="LEY-g9-CGx">
+                    <rect key="frame" x="161.5" y="64" width="91" height="68"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="100" id="B0L-Rl-80B">
-                            <variation key="widthClass=regular" constant="135"/>
+                        <constraint firstAttribute="height" constant="68" id="B0L-Rl-80B">
+                            <variation key="widthClass=regular" constant="90"/>
                         </constraint>
                         <constraint firstAttribute="width" secondItem="LEY-g9-CGx" secondAttribute="height" multiplier="4:3" id="zyh-gd-EeE"/>
                     </constraints>
                 </imageView>
                 <view contentMode="scaleToFill" verticalHuggingPriority="240" verticalCompressionResistancePriority="240" translatesAutoresizingMaskIntoConstraints="NO" id="jG1-DS-9p5">
-                    <rect key="frame" x="0.0" y="170.00000000000003" width="375" height="349.66666666666674"/>
+                    <rect key="frame" x="0.0" y="142" width="414" height="461.5"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="249" verticalHuggingPriority="249" verticalCompressionResistancePriority="749" image="IntroduceImage1" translatesAutoresizingMaskIntoConstraints="NO" id="wFf-k7-HE2">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="349.66666666666669"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="461.5"/>
                             <constraints>
                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="150" id="Bvn-fy-Eco"/>
                                 <constraint firstAttribute="width" secondItem="wFf-k7-HE2" secondAttribute="height" multiplier="375:312" priority="250" id="e5o-c4-XPZ"/>
                             </constraints>
                         </imageView>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <color key="backgroundColor" name="primaryBackground"/>
                     <constraints>
+                        <constraint firstItem="wFf-k7-HE2" firstAttribute="top" secondItem="jG1-DS-9p5" secondAttribute="top" id="53H-3w-I9P"/>
+                        <constraint firstAttribute="trailing" secondItem="wFf-k7-HE2" secondAttribute="trailing" id="6Bj-uK-JOr"/>
+                        <constraint firstAttribute="bottom" secondItem="wFf-k7-HE2" secondAttribute="bottom" id="SqK-9q-lt3"/>
                         <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="wFf-k7-HE2" secondAttribute="bottom" id="TfI-Wt-ahc"/>
                         <constraint firstItem="wFf-k7-HE2" firstAttribute="centerY" secondItem="jG1-DS-9p5" secondAttribute="centerY" id="ZbU-Fz-otl"/>
                         <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="wFf-k7-HE2" secondAttribute="trailing" id="c1b-4r-uOY"/>
                         <constraint firstItem="wFf-k7-HE2" firstAttribute="centerX" secondItem="jG1-DS-9p5" secondAttribute="centerX" id="e7g-Jn-wRJ"/>
                         <constraint firstItem="wFf-k7-HE2" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="jG1-DS-9p5" secondAttribute="leading" id="k8S-Ia-VQ9"/>
+                        <constraint firstItem="wFf-k7-HE2" firstAttribute="leading" secondItem="jG1-DS-9p5" secondAttribute="leading" id="rSn-Lv-enG"/>
                         <constraint firstItem="wFf-k7-HE2" firstAttribute="top" relation="greaterThanOrEqual" secondItem="jG1-DS-9p5" secondAttribute="top" id="v7n-07-PRz"/>
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bbr-4v-zM9">
-                    <rect key="frame" x="30" y="545.66666666666663" width="315" height="28"/>
+                    <rect key="frame" x="30" y="629.5" width="354" height="28"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="28" id="nFP-W8-3O9"/>
                     </constraints>
@@ -63,13 +68,13 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K31-Jg-aUI">
-                    <rect key="frame" x="30" y="584.66666666666663" width="315" height="20.333333333333371"/>
+                    <rect key="frame" x="30" y="668.5" width="354" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N29-gd-nz6" customClass="RoundedInsetsButton" customModule="LifeTech_lifedrive" customModuleProvider="target">
-                    <rect key="frame" x="57.666666666666657" y="635" width="260" height="46"/>
+                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N29-gd-nz6" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
+                    <rect key="frame" x="77" y="719" width="260" height="46"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="260" id="0QQ-jr-zZ0">
                             <variation key="widthClass=regular" constant="348"/>
@@ -83,8 +88,8 @@
                         <action selector="onCreateAccount:" destination="-1" eventType="touchUpInside" id="iuP-cf-e1b"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="STK-bc-GEv" customClass="RoundedInsetsButton" customModule="LifeTech_lifedrive" customModuleProvider="target">
-                    <rect key="frame" x="92.666666666666686" y="726" width="190" height="46"/>
+                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="STK-bc-GEv" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
+                    <rect key="frame" x="112" y="810" width="190" height="46"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="46" id="GPS-RI-Ueo">
                             <variation key="widthClass=regular" constant="44"/>
@@ -99,7 +104,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EJV-go-laA">
-                    <rect key="frame" x="166.66666666666666" y="696" width="41.666666666666657" height="15"/>
+                    <rect key="frame" x="186" y="780" width="42" height="15"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="15" id="I2Q-Ij-YQA"/>
                     </constraints>
@@ -108,7 +113,8 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="hc0-kb-fgC"/>
+            <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="STK-bc-GEv" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="0co-zl-NEx"/>
                 <constraint firstItem="N29-gd-nz6" firstAttribute="top" relation="lessThanOrEqual" secondItem="K31-Jg-aUI" secondAttribute="bottom" constant="30" id="20D-TK-i2Z"/>
@@ -116,7 +122,7 @@
                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="STK-bc-GEv" secondAttribute="bottom" constant="40" id="4B4-Ph-Ud6"/>
                 <constraint firstItem="hc0-kb-fgC" firstAttribute="trailing" secondItem="K31-Jg-aUI" secondAttribute="trailing" constant="30" id="4BL-aC-DjB"/>
                 <constraint firstItem="N29-gd-nz6" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="4MW-en-1nS"/>
-                <constraint firstItem="LEY-g9-CGx" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" priority="749" constant="60" id="7Ad-iU-EAl"/>
+                <constraint firstItem="LEY-g9-CGx" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" priority="749" constant="64" id="7Ad-iU-EAl"/>
                 <constraint firstItem="Bbr-4v-zM9" firstAttribute="leading" secondItem="hc0-kb-fgC" secondAttribute="leading" constant="30" id="EUZ-8p-kxa"/>
                 <constraint firstItem="jG1-DS-9p5" firstAttribute="top" secondItem="LEY-g9-CGx" secondAttribute="bottom" constant="10" id="Ggm-ol-elO"/>
                 <constraint firstAttribute="bottom" secondItem="STK-bc-GEv" secondAttribute="bottom" priority="749" constant="35" id="Kun-2b-EHa"/>
@@ -135,12 +141,14 @@
                 <constraint firstItem="hc0-kb-fgC" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="EJV-go-laA" secondAttribute="trailing" constant="10" id="oyK-is-ydV"/>
                 <constraint firstItem="EJV-go-laA" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="hc0-kb-fgC" secondAttribute="leading" constant="10" id="xpm-u4-tDM"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="hc0-kb-fgC"/>
             <point key="canvasLocation" x="32.5" y="60.5"/>
         </view>
     </objects>
     <resources>
         <image name="IntroduceImage1" width="364" height="404"/>
-        <image name="splash_logo" width="720" height="600"/>
+        <image name="logo_with_icon" width="353.5" height="429.5"/>
+        <namedColor name="primaryBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
